doc(swashbuckle): add manual annotation and set example request and examples response
